--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,24 +3,19 @@
     "version": 2,
     "builds": [
         {
-            "src": "dist/src/index.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "dist/src/knowledge_base.txt",
-                    "dist/src/models/**" 
-                ]
-            }
+            "src": "/index.js",
+            "use": "@vercel/node"
+          
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "dist/index.js" 
+            "dest": "/" 
         },
         { 
             "src": "/",
-            "dest": "dist/index.js" 
+            "dest": "/" 
         }
     ]
 }
