--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
+  
+"scripts": {
+  "clean": "rimraf dist",
   "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-  "build": "tsc && copyfiles -u 1 src/knowledge_base.txt dist/src", 
-  "start": "node dist/index.js", 
+  "build": "npm run clean && tsc && copyfiles -u 1 src/knowledge_base.txt dist/src && copyfiles -u 1 src/structured_knowledge_base.json dist/src",
+  "start": "node dist/src/index.js",
   "test": "echo \"Error: no test specified\" && exit 1"
 },
   "keywords": [],
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10"
   }
 }
