--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  
-"scripts": {
-  "clean": "rimraf dist",
-  "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-  "build": "npm run clean && tsc && copyfiles -u 1 src/knowledge_base.txt dist/src && copyfiles -u 1 src/structured_knowledge_base.json dist/src",
-  "start": "node dist/src/index.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+  "scripts": {
+    "clean": "rimraf dist",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "npm run clean && tsc && copyfiles -u 1 src/knowledge_base.txt dist/src && copyfiles -u 1 src/structured_knowledge_base.json dist/src",
+    "start": "node dist/src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "@google/genai": "^1.0.1",
     "@google/generative-ai": "^0.24.1",
     "@types/express": "^5.0.2",
     "axios": "^1.9.0",
